// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot default variant 1`] = `
<DocumentFragment>
  <div
    class="aje-input is-medium has-error"
  >
    <label
      class="aje-label"
      for="TextInput-3167682099403161"
    >
      Text Label
      <p
        class="aje-label--message"
      >
        message
      </p>
    </label>
    <input
      aria-describedby="TextInput-7418578274664415"
      id="TextInput-3167682099403161"
      placeholder="placeholder"
      type="text"
      value="content"
    />
    <p
      class="aje-label--error"
      id="TextInput-7418578274664415"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot floating variant 1`] = `
<DocumentFragment>
  <div
    class="aje-input--floating is-medium has-error"
  >
    <div
      class="aje-input__container"
    >
      <input
        aria-describedby="TextInput-7418578274664415"
        id="TextInput-3167682099403161"
        placeholder="placeholder"
        type="text"
        value="content"
      />
      <label
        class=""
        for="TextInput-3167682099403161"
      >
        Text Label
      </label>
    </div>
    <p
      class="aje-label--message"
    >
      message
    </p>
    <p
      class="aje-label--error"
      id="TextInput-7418578274664415"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
